<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="nieuweKamer"
    android:theme="@style/Theme.AppCompat"
    android:background="@drawable/background_app"
    tools:context=".Activities.NieuweKamerActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="322dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cleaning_buddy" />

    <TextView
        android:id="@+id/nieuweKamer_subtTitel_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="142dp"
        android:text="@string/nieuweKamer_subTitel_tv_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/nieuweKamer_naam_et_id"
        android:maxLength="50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="296dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nieuweKamer_naam_et_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/nieuweKamer_opslaan_btn_id"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/nieuweKamer_naam_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="312dp"
        android:text="@string/nieuweKamer_naam_tv_text"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/nieuweKamer_annuleren_btn_id"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nieuweKamer_annuleren_btn_id"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/button_style"
        android:textColor="#FFFFFF"
        android:onClick="gaNaarMenu"
        android:text="@string/nieuweKamer_annuleren_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nieuweKamer_opslaan_btn_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nieuweKamer_opslaan_btn_id"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_style"
        android:textColor="#FFFFFF"
        android:onClick="nieuweKamer"
        android:text="@string/nieuweKamer_opslaan_btn_text"
        app:layout_constraintBottom_toBottomOf="@+id/nieuweKamer_annuleren_btn_id"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>