<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    android:onClick="goToRegistreren"
    android:theme="@style/Theme.AppCompat"
    tools:context=".Activities.LogInActivity">

    <EditText
        android:id="@+id/login_wachtwoord_id"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="451dp"
        android:ems="10"
        android:hint="@string/login_wachtwoord"
        android:inputType="textPassword"
        android:maxLength="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_registreren_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="318dp"
        android:background="@drawable/button_style"
        android:onClick="goToRegistreren"
        android:text="@string/login_registreren"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/login_login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="381dp"
        android:background="@drawable/button_style"
        android:onClick="loginGoToMenu"
        android:text="@string/login_login"
        android:textColor="#FFFFFF" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_gebruikersnaam_id"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_login_id"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="95dp"
        android:hint="@string/login_gebruikersnaam"
        android:maxLength="50"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="322dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="46dp"
        app:srcCompat="@drawable/cleaning_buddy" />

</RelativeLayout>
